syntax = "proto3";

package twins;

import "google/protobuf/duration.proto";

option go_package = "github.com/relab/hotstuff/internal/proto/twinspb";

message NodeID {
  uint32 ReplicaID = 1;
  uint32 NetworkID = 2;
}

message Partition {
  repeated NodeID Nodes = 1;
}

message View {
  uint32 Leader = 1;
  repeated Partition Partitions = 2;
}

message Scenario {
  repeated NodeID Nodes = 1;
  repeated View Views = 2;
}

message GeneratorSettings {
  uint32 Replicas = 1;
  uint32 Twins = 2;
  uint32 Rounds = 3;
  bool Shuffle = 4;
  int64 Seed = 5;
  string Consensus = 6;
  google.protobuf.Duration ViewTimeout = 7;
}

message Result {
  bool Safe = 1;
  uint32 Commits = 2;
  Scenario Scenario = 3;
}
